--- a/2 P2 Project/app/templates/base.html
+++ b/2 P2 Project/app/templates/base.html
@@ -7,7 +7,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
 <nav>
     <h1>
-        <a href="{{ url_for('players_index') }}">Football DB</a>
+        <a href="{{ url_for('players_index') }}">FOOTBALL DB</a>
     </h1>
     <ul>
         <li>
