--- a/2 P2 Project/app/templates/players/index.html
+++ b/2 P2 Project/app/templates/players/index.html
@@ -8,17 +8,18 @@
 {% endblock header %}
 {% block content %}
     {% for player in players %}
-        <article class="post">
-            <header>
-                <div>
-                    <h1>{{ player['player_name'] }}</h1>
-                    <div class="about">API ID {{ player['player_api_id'] }}</div>
-                </div>
-                <a class="action"
-                    href="{{ url_for('player_update_view', player_api_id=player['player_api_id']) }}">Edit</a>
-            </header>
-            <p class="body">Date: {{ player['date'] }}</p>
-        </article>
+        <a href="{{ url_for('player_info', player_api_id=player['player_api_id']) }}" class="player-link">
+            <article class="post">
+                <header>
+                    <div>
+                        <h1>{{ player['player_name'] }}</h1>
+                        <div class="about">API ID {{ player['player_api_id'] }}</div>
+                    </div>
+                    <a class="action"
+                        href="{{ url_for('player_update_view', player_api_id=player['player_api_id']) }}">Edit</a>
+                </header>
+                <p class="body">Date: {{ player['date'] }}</p>
+            </article>
         {% if not loop.last %}<hr />{% endif %}
     {% endfor %}
 {% endblock content %}
